fix: fix style on ios

--- a/src/style.css
+++ b/src/style.css
@@ -5,6 +5,9 @@
 }
 
 :root {
+  width: 100%;
+  height: 100%;
+
   font-family: system-ui, -apple-system, Segoe UI, Roboto, Emoji, Helvetica, Arial, sans-serif;
   font-size: 16px;
 
@@ -19,10 +22,10 @@ html.dark {
   color-scheme: dark;
 }
 
-body {
+html body {
   margin: 0;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
 }
 
 #app {
